2005-06-24  Nathaniel Smith  <njs@codesourcery.com>

	* unix/process.cc (process_spawn): Format log output correctly.

2005-06-24  Nathaniel Smith  <njs@codesourcery.com>

	* unix/process.cc (existsonpath): Reindent.  Add logging, and use
	'command -v' instead of 'which' (as per Matt Johnston's discovery
	that it is more portable).
	(process_spawn): Handle exec failure more properly.
	* tests/t_existsonpath.at: New test.
	* testsuite.at: Add it.

2005-06-25  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.cc: Log correct locale set for LC_MESSAGES.

2005-06-24  Nathaniel Smith  <njs@codesourcery.com>

	* unix/process.cc: Remove tabs.

2005-06-24  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua (get_preferred_merge2_command)
	(get_preferred_merge3_command): Move meld to the bottom of the
	default merge tool search order.  Also, use xemacs if it appears
	in $EDITOR, otherwise use emacs.
	* revision.cc (check_sane_history): Remove stale comment.

2005-06-24  Matt Johnston  <matt@ucc.asn.au>

	* transforms.{cc,hh}: combine gzip and base64 in one
	pipe for pack()/unpack() to save memory
	* vocab.hh: add swap() to encodings/atomics
	* file_io.cc: use swap() to avoid copying

2005-06-21  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (do_diff): Use calculate_arbitrary_change_set,
	instead of reimplementing it.

2005-06-21  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (find_least_common_ancestor): Handle left == right
	case.
	* tests/t_diff_currev.at: Un-XFAIL.
	
2005-06-21  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc (rebuild_merkle_trees): Fix FIXME comments to match
	reality.
	* tests/t_netsync_diffbranch.at: No longer a bug, remove
	priority.

2005-06-20  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Hook Reference): Oops, missed a @ref.

2005-06-20  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Default monotonerc): Rename section to...